Initial site commit

--- a/404.html
+++ b/404.html
@@ -8,12 +8,8 @@
 			<link w3-include-html="/common/head.html"/>
 		<!-- Scripts -->
 			<script src="/scripts/global.js" defer="defer"></script>
-			<script src="/scripts/togglemenu.js"></script>			
+			<script src="/scripts/togglemenu.js"></script>
 	</head>
-
-  <script>
-    includeHTML();
-  </script>
 
 	<body>
 		<div class="page-width">
@@ -23,7 +19,10 @@
 					<div w3-include-html="/common/nav.html"></div>				
 				</header>
 
-				<section id="article" w3-include-html="/pages/home.html"></section>
+				<section id="article">
+					<h1>404</h1>
+          <p>Looks like the page you're looking for doesn't exist. Please try again.</p>							
+				</section>
 
 				<footer>
 					<div w3-include-html="/common/footer.html"></div>
@@ -43,3 +42,7 @@
 		</div>
 	</body>
 </html>
+
+<script>
+	includeHTML();
+</script>
