--- a/archive.html
+++ b/archive.html
@@ -8,7 +8,7 @@
 			<link w3-include-html="/common/head.html"/>
 		<!-- Scripts -->
 			<script src="/scripts/global.js" defer="defer"></script>
-			<script src="/scripts/togglemenu.js"></script>			
+			<script src="/scripts/togglemenu.js"></script>
 	</head>
 
   <script>
@@ -23,7 +23,9 @@
 					<div w3-include-html="/common/nav.html"></div>				
 				</header>
 
-				<section id="article" w3-include-html="/pages/home.html"></section>
+				<section id="article">
+					<div w3-include-html="/pages/postlist.html"></div>							
+				</section>
 
 				<footer>
 					<div w3-include-html="/common/footer.html"></div>
