--- a/common/header.html
+++ b/common/header.html
@@ -10,7 +10,7 @@
     </svg> -->
     <!-- <h1 class="title"><span w3-include-html="/common/site_title.html"></span></h1> -->
     <div id="logo">
-      <img src="/images/logo-bold-small.png" alt="Revertices">
+      <img src="/images/logo-small-gif.gif" alt="Revertices">
     </div>
   </a>
   <a href="javascript:void(0);" class="icon" onclick="toggleMobileMenu()">
