Updating structure a bit and replacing footer links

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 			</header>
 
 			<section id="article">
-				<div w3-include-html="/pages/contact.html"></div>
+				<div w3-include-html="/pages/about.html"></div>
 			</section>
 
 			<footer>
