--- a/common/nav.html
+++ b/common/nav.html
@@ -7,7 +7,7 @@
       <a href="/archive.html" class="menuItem" id="Archive" title="Archive">Archive</a>
     </li> -->
     <li>
-      <a href="/info.html" class="menuItem" id="About" title="About">About</a>
+      <a href="/about.html" class="menuItem" id="About" title="About">About</a>
     </li>
     <li>
       <a href="/contact.html" class="menuItem" id="Contact" title="Contact">Contact</a>
