--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<!-- Critical -->
 	<script src="/scripts/htmlinclude.js"></script>
 	<link rel="stylesheet" type="text/css" href="/styles/base.css">
+	<meta name="theme-color" content="#110b1e" />
 	<!-- Centralized head -->
 	<link w3-include-html="/common/head.html" />
 	<!-- Scripts -->
