--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,2 @@
 <h1>Welcome!</h1>
-<p>It's good to have you here :)</p>
-<p>This is a website I'm building to teach myself templating and a more holistic style of webdev, from scratch.</p>
-<p>Right now, it's also a signpost for <a href="/info.html">ways to find me</a> while I'm working on a whole new version of this thing.</p>
-
-<p>Poke around if you like!</p>
+<p>This is the Revertices webbed site! Revertices is a game!</p>
