--- a/pages/about.html
+++ b/pages/about.html
@@ -1,23 +1,26 @@
-<h2>Lex (she/they)</h2>
-<p>I make music! Sometimes for games, and sometimes for myself.</p>
+<h2>Revertice is a game by fuzzyvoidco</h2>
+<p>Here's a byline!</p>
 
-<!--<div class="cropped">-->
-<img src="/images/lex_headshot.jpg" loading="lazy" alt="Lex Feathers" width="50%">
-<!--</div>-->
+<img src="/images/logo-bold-small.png" loading="lazy" alt="Revertices" width="69%">
 
-<h3>Here's where you can find me online:</h3>
+<!-- You can add more images like this: -->
+<img src="/images/Logo_smaller.png" loading="lazy" alt="Revertices" width="69%">
+
+<p>Here's the main blurb about the game.</p>
+<p>Separate paragraphs with p tags :)</p>
+
+<h3>Buy or wishlist Revertices:</h3>
 <ul>
-  <li><a href="https://bsky.app/profile/gameaudio.ca" target="_blank">Bsky (probably where I will mainly be posting)</a>
+  <li>
+    <a href="https://fuzzyvoidco.itch.io/revertices" target="_blank">Itch.io</a>
   </li>
-  <li><a href="https://instagram.com/lex.feathers" target="_blank">Instagram (personal stuff and gig-posting mainly)</a>
+  <li>
+    <a href="/" target="_blank">Example second link</a>
   </li>
-  <li><a href="https://octodon.social/@lexfeathers" target="_blank">Masto (I want to like this more than I do)</a></li>
-  <li><a href="https://gameaudio.ca" target="_blank">My portfolio website</a></li>
-</ul>
-
-<h3>my Bandcamp pages:</h3>
-<p>(ie, where you can hear my music)</p>
-<ul>
-  <li><a href="https://waxlimbs.bandcamp.com" target="_blank">Waxlimbs (my band)</a></li>
-  <li><a href="https://voidfemmes.bandcamp.com" target="_blank">Void Femmes (my electronic music)</a></li>
+  <li>
+    <a href="/" target="_blank">Example third link</a>
+  </li>
+  <li>
+    <a href="/" target="_blank">Example fourth link</a>
+  </li>
 </ul>
