Fixing about page typo and adding author link

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,4 @@
-<h2>Revertice is a game by fuzzyvoidco</h2>
+<h2>Revertices is a game by <a href="https://fuzzyvoidco.itch.io">fuzzyvoidco</a></h2>
 <p>Here's a byline!</p>
 
 <img src="/images/logo-bold-small.png" loading="lazy" alt="Revertices" width="50%">
