More about page structure

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,1 +1,1 @@
-<p>I can be reached at <a href="mailto:lex@gameaudio.ca">lex@gameaudio.ca</a></p>
+<p>You can put a mailto contact link <a href="mailto:info@example.com">here!</a></p>
