Changed content in about, contact and home

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,10 +1,9 @@
-<h2>Revertices is a game by <a href="https://fuzzyvoidco.itch.io">fuzzyvoidco</a></h2>
-<p>Here's a byline!</p>
+<p>Revertices is being developed by the Fuzzy Void Collective directed by Kezia Adamo. We create strange, surreal games with a the right balance of grunge and polish.</p>
 
-<img src="/images/logo-bold-small.png" loading="lazy" alt="Revertices" width="50%">
-
-<p>Here's the main blurb about the game.</p>
-<p>Separate paragraphs with p tags :)</p>
+<p>Creative Director, Lead Programmer, Lead Designer and Lead Artist: Kezia Adamo</p>
+<p>Lead Musician and Lead Sound Designer: Lex Feathers</p>
+<p>Programmer: Robinson Farrar</p>
+<p>Musician: Alex Norton</p>
 
 <h3>Buy or wishlist Revertices:</h3>
 <ul>
@@ -12,13 +11,7 @@
     <a href="https://fuzzyvoidco.itch.io/revertices" target="_blank">Itch.io</a>
   </li>
   <li>
-    <a href="/" target="_blank">Example second link</a>
-  </li>
-  <li>
-    <a href="/" target="_blank">Example third link</a>
-  </li>
-  <li>
-    <a href="/" target="_blank">Example fourth link</a>
+    <a href="/" target="_blank">Steam Page COMING SOON</a>
   </li>
 </ul>
 
