--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,1 +1,1 @@
-<p>You can put a mailto contact link <a href="mailto:info@example.com">here!</a></p>
+<p><a href="fuzzyvoidcollective@gmail.com">Contact us!</a></p>
