--- a/pages/home.html
+++ b/pages/home.html
@@ -1,2 +1,5 @@
 <h1>Welcome!</h1>
-<p>This is the Revertices webbed site! Revertices is a game!</p>
+<p>What is Revertices? Revertices is a 2D sidescrolling action combat game where you must choose a lone survivor! 
+However, the chosen must fight the corrupted remains of their two beloved friends. 
+You will witness different facets of the story, gameplay, and character relationships in each route.</p>
+<p>Revertices is currently mid-development with plans to release on Windows through Itch.io and Steam!</p>
