Modifications to about and home pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,9 +1,28 @@
 <p>Revertices is being developed by the Fuzzy Void Collective directed by Kezia Adamo. We create strange, surreal games with a the right balance of grunge and polish.</p>
 
-<p>Creative Director, Lead Programmer, Lead Designer and Lead Artist: Kezia Adamo</p>
-<p>Lead Musician and Lead Sound Designer: Lex Feathers</p>
-<p>Programmer: Robinson Farrar</p>
-<p>Musician: Alex Norton</p>
+<p>Credits</p>
+<table>
+    <tr>
+        <td><b>Creative Director</b></td>
+        <td>Kezia Adamo</td>
+    </tr>
+    <tr>
+    <td><b> Lead Programmer </b></td> <td>Kezia Adamo</td></tr>
+    <tr><td><b> Lead Designer </b></td> <td>Kezia Adamo</td></tr>
+    <tr><td><b> Lead Artist </b></td> <td>Kezia Adamo</td></tr>
+    <tr>
+        <td><b>Lead Musician</b></td><td>Lex Feathers</td>
+    </tr>
+    <tr><td><b>Lead Sound Designer</b></td><td>Lex Feathers</td></tr>
+    <tr>
+        <td><b>Programmer:</b></td>
+        <td>Robinson Farrar</td>
+    </tr>
+    <tr>
+        <td><b>Musician:</b></td>
+        <td>Alex Norton</td>
+    </tr>
+</table>
 
 <h3>Buy or wishlist Revertices:</h3>
 <ul>
@@ -14,6 +33,3 @@
     <a href="/" target="_blank">Steam Page COMING SOON</a>
   </li>
 </ul>
-
-<!-- You can add more images like this: -->
-<img src="/images/Logo_smaller.png" loading="lazy" alt="Revertices" width="50%">
