fixing my dumbass mistakes

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,4 @@
-<p>Revertices is being developed by the Fuzzy Void Collective directed by Kezia Adamo. We create strange, surreal games with a the right balance of grunge and polish.</p>
+<p>Revertices is being developed by the Fuzzy Void Collective directed by Kezia Adamo. We create strange, surreal games with just the right balance of grunge and polish.</p>
 
 <p>Credits</p>
 <table>
@@ -7,19 +7,19 @@
         <td>Kezia Adamo</td>
     </tr>
     <tr>
-    <td><b> Lead Programmer </b></td> <td>Kezia Adamo</td></tr>
-    <tr><td><b> Lead Designer </b></td> <td>Kezia Adamo</td></tr>
-    <tr><td><b> Lead Artist </b></td> <td>Kezia Adamo</td></tr>
+    <td><b> Lead Programmer: </b></td> <td>Kezia Adamo</td></tr>
+    <tr><td><b> Lead Designer:  </b></td> <td>Kezia Adamo</td></tr>
+    <tr><td><b> Lead Artist:  </b></td> <td>Kezia Adamo</td></tr>
     <tr>
-        <td><b>Lead Musician</b></td><td>Lex Feathers</td>
+        <td><b>Lead Musician: </b></td><td>Lex Feathers</td>
     </tr>
-    <tr><td><b>Lead Sound Designer</b></td><td>Lex Feathers</td></tr>
+    <tr><td><b>Lead Sound Designer: </b></td><td>Lex Feathers</td></tr>
     <tr>
-        <td><b>Programmer:</b></td>
+        <td><b>Programmer: </b></td>
         <td>Robinson Farrar</td>
     </tr>
     <tr>
-        <td><b>Musician:</b></td>
+        <td><b>Musician: </b></td>
         <td>Alex Norton</td>
     </tr>
 </table>
