--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@ However, the chosen must fight the corrupted remains of their two beloved friend
 You will witness different facets of the story, gameplay, and character relationships in each route.</p>
 <p>Revertices is currently mid-development with plans to release on Windows through Itch.io and Steam!</p>
 
-<img src="/images/reverticesscreenshot1" loading="lazy" alt="Revertices" width="25%">
-<img src="/images/reverticesscreenshot2" loading="lazy" alt="Revertices" width="25%">
-<img src="/images/reverticesscreenshot4" loading="lazy" alt="Revertices" width="25%">
-<img src="/images/reverticesscreenshot5" loading="lazy" alt="Revertices" width="25%">
+<img src="/images/reverticesscreenshot1.png" loading="lazy" alt="Revertices" width="25%">
+<img src="/images/reverticesscreenshot2.png" loading="lazy" alt="Revertices" width="25%">
+<img src="/images/reverticesscreenshot4.png" loading="lazy" alt="Revertices" width="25%">
+<img src="/images/reverticesscreenshot5.png" loading="lazy" alt="Revertices" width="25%">
