--- a/pages/home.html
+++ b/pages/home.html
@@ -2,8 +2,20 @@
 <p>What is Revertices? Revertices is a 2D sidescrolling action combat game where you must choose a lone survivor! 
 However, the chosen must fight the corrupted remains of their two beloved friends. 
 You will witness different facets of the story, gameplay, and character relationships in each route.</p>
-<p>Revertices is currently mid-development with plans to release on Windows through Itch.io and Steam!</p>
+<p>Revertices is currently mid-development and will be released on Windows through Itch.io and Steam!</p>
 
+
+<h3>Wishlist Revertices:</h3>
+<ul>
+  <li>
+    <a href="https://fuzzyvoidco.itch.io/revertices" target="_blank">Itch.io</a>
+  </li>
+  <li>
+    <a href="/" target="_blank">Steam Page COMING SOON</a>
+  </li>
+</ul>
+
+<img src="/images/revertices-header.png" loading="lazy" alt="Revertices" width="25%">
 <img src="/images/reverticesscreenshot1.png" loading="lazy" alt="Revertices" width="25%">
 <img src="/images/reverticesscreenshot2.png" loading="lazy" alt="Revertices" width="25%">
 <img src="/images/reverticesscreenshot4.png" loading="lazy" alt="Revertices" width="25%">
