Removed extra link

--- a/pages/home.html
+++ b/pages/home.html
@@ -11,7 +11,7 @@ You will witness different facets of the story, gameplay, and character relation
     <a href="https://fuzzyvoidco.itch.io/revertices" target="_blank">Itch.io</a>
   </li>
   <li>
-    <a href="/" target="_blank">Steam Page COMING SOON</a>
+    Steam Page COMING SOON
   </li>
 </ul>
 
