--- a/pages/home.html
+++ b/pages/home.html
@@ -15,6 +15,7 @@ You will witness different facets of the story, gameplay, and character relation
   </li>
 </ul>
 
+<iframe width="420" height="315" src="https://www.youtube.com/watch?v=I0DO1vfHih4"></iframe>
 <img src="/images/revertices-header.png" loading="lazy" alt="Revertices" width="25%">
 <img src="/images/reverticesscreenshot1.png" loading="lazy" alt="Revertices" width="25%">
 <img src="/images/reverticesscreenshot2.png" loading="lazy" alt="Revertices" width="25%">
