--- a/pages/about.html
+++ b/pages/about.html
@@ -22,4 +22,8 @@
         <td><b>Musician: </b></td>
         <td>Alex Norton</td>
     </tr>
+        <tr>
+        <td><b>Logo Design: </b></td>
+        <td>Colin Cummings</td>
+    </tr>
 </table>
