--- a/pages/home.html
+++ b/pages/home.html
@@ -15,7 +15,10 @@ You will witness different facets of the story, gameplay, and character relation
   </li>
 </ul>
 
-<iframe width="420" height="315" src="https://www.youtube.com/watch?v=I0DO1vfHih4"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/I0DO1vfHih4?si=UDYTSgKXV38o8EDa" title="YouTube video player" 
+frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <img src="/images/revertices-header.png" loading="lazy" alt="Revertices" width="25%">
 <img src="/images/reverticesscreenshot1.png" loading="lazy" alt="Revertices" width="25%">
 <img src="/images/reverticesscreenshot2.png" loading="lazy" alt="Revertices" width="25%">
