Adding bg tickers

--- a/404.html
+++ b/404.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+	<div w3-include-html="/common/tickers.html"></div>
+
 	<div class="page-width">
 		<div class="maincontainer">
 			<header>
