--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </script>
 
 <body>
+	<div w3-include-html="/common/tickers.html"></div>
+
 	<div class="page-width">
 		<div class="maincontainer">
 			<header>
