--- a/common/tickers.html
+++ b/common/tickers.html
@@ -1,2 +1,2 @@
-<div class="tickers"></div>
-<div class="tickers"></div>
+<div class="tickers" style="float: left;"></div>
+<div class="tickers" style="float: right;"></div>
