Adding class to ticker div

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<div w3-include-html="/common/tickers.html"></div>
+	<div w3-include-html="/common/tickers.html" class="tickerbox"></div>
 
 	<div class="page-width">
 		<div class="maincontainer">
