--- a/archive.html
+++ b/archive.html
@@ -18,7 +18,7 @@
 </script>
 
 <body>
-	<div w3-include-html="/common/tickers.html"></div>
+	<div w3-include-html="/common/tickers.html" class="tickerbox"></div>
 
 	<div class="page-width">
 		<div class="maincontainer">
