Updating about page table

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,29 +1,59 @@
-<p>Revertices is being developed by the Fuzzy Void Collective directed by Kezia Adamo. We create strange, surreal games with just the right balance of grunge and polish.</p>
+<p>Revertices is being developed by the Fuzzy Void Collective directed by Kezia Adamo. We create strange, surreal games
+    with just the right balance of grunge and polish.</p>
 
-<p>Credits</p>
+<h2>Credits</h2>
 <table>
     <tr>
-        <td><b>Creative Director</b></td>
+        <td>
+            <b>Creative Director</b>
+        </td>
         <td>Kezia Adamo</td>
     </tr>
     <tr>
-    <td><b> Lead Programmer: </b></td> <td>Kezia Adamo</td></tr>
-    <tr><td><b> Lead Designer:  </b></td> <td>Kezia Adamo</td></tr>
-    <tr><td><b> Lead Artist:  </b></td> <td>Kezia Adamo</td></tr>
-    <tr>
-        <td><b>Lead Musician: </b></td><td>Lex Feathers</td>
+        <td>
+            <b>Lead Programmer:</b>
+        </td>
+        <td>Kezia Adamo</td>
     </tr>
-    <tr><td><b>Lead Sound Designer: </b></td><td>Lex Feathers</td></tr>
     <tr>
-        <td><b>Programmer: </b></td>
+        <td>
+            <b>Lead Designer:</b>
+        </td>
+        <td>Kezia Adamo</td>
+    </tr>
+    <tr>
+        <td><b>Lead Artist:</b>
+        </td>
+        <td>Kezia Adamo</td>
+    </tr>
+    <tr>
+        <td>
+            <b>Lead Musician:</b>
+        </td>
+        <td>Lex Feathers</td>
+    </tr>
+    <tr>
+        <td>
+            <b>Lead Sound Designer:</b>
+        </td>
+        <td>Lex Feathers</td>
+    </tr>
+    <tr>
+        <td>
+            <b>Programmer:</b>
+        </td>
         <td>Robinson Farrar</td>
     </tr>
     <tr>
-        <td><b>Musician: </b></td>
+        <td>
+            <b>Musician:</b>
+        </td>
         <td>Alex Norton</td>
     </tr>
-        <tr>
-        <td><b>Logo Design: </b></td>
+    <tr>
+        <td>
+            <b>Logo Design:</b>
+        </td>
         <td>Colin Cummings</td>
     </tr>
 </table>
