Added Steam Page link

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,17 +2,17 @@
 <p>What is Revertices? Revertices is a 2D sidescrolling action combat game where you must choose a lone survivor! 
 However, the chosen must fight the corrupted remains of their two beloved friends. 
 You will witness different facets of the story, gameplay, and character relationships in each route.</p>
-<p>Revertices is currently mid-development and will be released on Windows through Itch.io and Steam!</p>
+<p>Revertices is currently mid-development and will be released on Windows through Steam and Itch.io!</p>
 
 
 <h3>Wishlist Revertices:</h3>
 <ul>
-  <li>
-    <a href="https://fuzzyvoidco.itch.io/revertices" target="_blank">Itch.io</a>
-  </li>
-  <li>
-    Steam Page COMING SOON
-  </li>
+    <li>
+        <a href="https://store.steampowered.com/app/3236560/Revertices/">Steam</a>
+    </li>
+    <li>
+        <a href="https://fuzzyvoidco.itch.io/revertices" target="_blank">Itch.io</a>
+    </li>
 </ul>
 
 <img src="/images/revertices-header.png" loading="lazy" alt="Revertices" width="25%">
