Adding guestbook link

--- a/pages/about.html
+++ b/pages/about.html
@@ -57,3 +57,5 @@
         <td>Colin Cummings</td>
     </tr>
 </table>
+
+<h2><a href="http://www.websitegoodies.com/guestbook.php?a=view&id=1740881">Sign the Revertices Guestbook</a></h2>
