New Guestbook link

--- a/pages/about.html
+++ b/pages/about.html
@@ -22,7 +22,8 @@
         <td>Kezia Adamo</td>
     </tr>
     <tr>
-        <td><b>Lead Artist:</b>
+        <td>
+            <b>Lead Artist:</b>
         </td>
         <td>Kezia Adamo</td>
     </tr>
@@ -58,4 +59,8 @@
     </tr>
 </table>
 
-<h2><a href="http://www.websitegoodies.com/guestbook.php?a=view&id=1740881">Sign the Revertices Guestbook</a></h2>
+<H2>Sign the Revertices Guestbook:</H2>
+<a href="http://users.smartgb.com/g/g.php?a=s&i=g19-01694-e6">
+    <img alt="Revertices Guestbook" border="0" src="/images/Logo_smallest.png" width="176" height="62"
+        style="image-rendering: pixelated;">
+</a>
