--- a/pages/about.html
+++ b/pages/about.html
@@ -61,6 +61,6 @@
 
 <H2>Sign the Revertices Guestbook:</H2>
 <a href="http://users.smartgb.com/g/g.php?a=s&i=g19-01694-e6">
-    <img alt="Revertices Guestbook" border="0" src="/images/Logo_smallest.png" width="176" height="62"
+    <img alt="Revertices Guestbook" border="0" src="/images/Logo_smallest.png" width="176" height="auto"
         style="image-rendering: pixelated;">
 </a>
