--- a/pages/about.html
+++ b/pages/about.html
@@ -45,6 +45,12 @@
         </td>
         <td>Robinson Farrar</td>
     </tr>
+        <tr>
+        <td>
+            <b>Designer:</b>
+        </td>
+        <td>Arthur Adamo</td>
+    </tr>
     <tr>
         <td>
             <b>Musician:</b>
@@ -56,6 +62,12 @@
             <b>Logo Design:</b>
         </td>
         <td>Colin Cummings</td>
+    </tr>
+        <tr>
+        <td>
+            <b>QA:</b>
+        </td>
+        <td>Sean Berridge</td>
     </tr>
 </table>
 
