Credits update and NoGenAI.png added

--- a/pages/about.html
+++ b/pages/about.html
@@ -41,15 +41,15 @@
     </tr>
     <tr>
         <td>
+            <b>Level Designer:</b>
+        </td>
+        <td>Arthur Adamo</td>
+    </tr>
+    <tr>
+        <td>
             <b>Programmer:</b>
         </td>
         <td>Robinson Farrar</td>
-    </tr>
-        <tr>
-        <td>
-            <b>Designer:</b>
-        </td>
-        <td>Arthur Adamo</td>
     </tr>
     <tr>
         <td>
@@ -57,17 +57,17 @@
         </td>
         <td>Alex Norton</td>
     </tr>
-    <tr>
-        <td>
-            <b>Logo Design:</b>
-        </td>
-        <td>Colin Cummings</td>
-    </tr>
         <tr>
         <td>
             <b>QA:</b>
         </td>
         <td>Sean Berridge</td>
+    </tr>
+    <tr>
+        <td>
+            <b>Logo Design:</b>
+        </td>
+        <td>Colin Cummings</td>
     </tr>
 </table>
 
@@ -75,4 +75,8 @@
 <a href="http://users.smartgb.com/g/g.php?a=s&i=g19-01694-e6">
     <img alt="Revertices Guestbook" border="0" src="/images/guestbook.png" width="176" height="auto"
         style="image-rendering: pixelated;">
+</a>
+
+<H2>---</H2>
+<img src="/images/NoGenAI.png" loading="lazy" alt="None of that shit in our game!!">
 </a>
