Added Sunny to the credits

--- a/pages/about.html
+++ b/pages/about.html
@@ -47,6 +47,12 @@
     </tr>
     <tr>
         <td>
+            <b>Producer/Release Manager:</b>
+        </td>
+        <td>Sunny Evans</td>
+    </tr>
+    <tr>
+        <td>
             <b>Programmer:</b>
         </td>
         <td>Robinson Farrar</td>
@@ -57,7 +63,7 @@
         </td>
         <td>Alex Norton</td>
     </tr>
-        <tr>
+    <tr>
         <td>
             <b>QA:</b>
         </td>
