--- a/pages/about.html
+++ b/pages/about.html
@@ -52,10 +52,30 @@
         <td>Sunny Evans</td>
     </tr>
     <tr>
+    <tr>
+        <td>
+            <b>Level Artist:</b>
+        </td>
+        <td>Sunny Evans</td>
+    </tr>
+    <tr>
+    <tr>
+        <td>
+            <b>3D Artist:</b>
+        </td>
+        <td>Allison Lownie</td>
+    </tr>
+    <tr>
         <td>
             <b>Programmer:</b>
         </td>
         <td>Robinson Farrar</td>
+    </tr>
+    <tr>
+        <td>
+            <b>Logo Design:</b>
+        </td>
+        <td>Colin Cummings</td>
     </tr>
     <tr>
         <td>
@@ -68,12 +88,6 @@
             <b>QA:</b>
         </td>
         <td>Sean Berridge</td>
-    </tr>
-    <tr>
-        <td>
-            <b>Logo Design:</b>
-        </td>
-        <td>Colin Cummings</td>
     </tr>
 </table>
 
