--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,7 @@
-<p>Revertices is being developed by the Fuzzy Void Collective directed by Kezia Adamo. We create strange, surreal games
-    with just the right balance of grunge and polish.</p>
+<p>
+    Revertices is being developed by the Fuzzy Void Collective directed by Kezia Adamo. We create strange, surreal games
+    with just the right balance of grunge and polish.
+</p>
 
 <h2>Credits</h2>
 <table>
@@ -94,9 +96,15 @@
 <H2>Sign the Revertices Guestbook:</H2>
 <a href="http://users.smartgb.com/g/g.php?a=s&i=g19-01694-e6">
     <img alt="Revertices Guestbook" border="0" src="/images/guestbook.png" width="176" height="auto"
-        style="image-rendering: pixelated;">
+         style="image-rendering: pixelated;">
 </a>
 
 <H2>---</H2>
-<img src="/images/NoGenAI.png" loading="lazy" alt="None of that shit in our game!!">
+<a>
+    <img src="/images/NoGenAI.png" loading="lazy" alt="None of that shit in our game!!">
+</a>
+
+<H2>---</H2>
+<a>
+    <img src="/images/snotwurmlogo.png" loading="lazy" alt="WE LOVE THE WORMS!!">
 </a>
