added link to snotwurm website

--- a/pages/about.html
+++ b/pages/about.html
@@ -99,12 +99,13 @@
          style="image-rendering: pixelated;">
 </a>
 
-<H2>---</H2>
-<a>
-    <img src="/images/NoGenAI.png" loading="lazy" alt="None of that shit in our game!!">
+
+<H2>A Snotwurm Studios Production</H2>
+<a href="https://snotwurm.website/">
+    <img src="/images/snotwurmlogo.png" loading="lazy" alt="WE LOVE THE WORMS!!">
 </a>
 
-<H2>---</H2>
+<H2>No Gen AI in this game! Everything, from conception to final assets, is made by real people.</H2>
 <a>
-    <img src="/images/snotwurmlogo.png" loading="lazy" alt="WE LOVE THE WORMS!!">
+    <img src="/images/NoGenAI.png" loading="lazy" alt="None of that shit in our game!!">
 </a>
